--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <style>
@@ -52,6 +52,125 @@
     </script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyACGeO9TeMbOLSk1We5O5Yrh5FXnGUQSbs&callback=initMap">
+    </script>
+  </body>
+</html> -->
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      h2 {
+        position: relative;
+        left: 45%;
+        font-family: verdana;
+        font-size: 200%
+       }
+      p{
+        position: relative;
+        font-size: 130%;
+        font-family: normal;
+      }
+      select{
+        position: relative;
+        font-size: 130%;
+      }
+      #map {
+        height: 550px;
+        position: absolute;
+        left: 50px;
+        right: 100px;
+        padding-top: 30px;
+        border-style: hidden;
+        margin-bottom: 70px;
+      }
+
+    </style>
+  </head>
+  <body>
+    <h2>Twitter Map</h2>
+    <p>To see the tweets on Googole map, please click the dropdown menu and select one of the key words. Twitts refreshes every 10s</p>
+     <select id=drop>
+        <option value="Trump">Trump</option>
+        <option value="Hillary">Hillary</option>
+        <option value="Warriors">Warriors</option>
+        <option value="iphone7">iphone7</option>
+        <option value="LinkedIn">LinkedIn</option>
+        <option value="Amazon">Amazon</option>
+        <option value="Google">Google</option>
+        <option value="Uber">Uber</option>
+        <option value="Columbia">Columbia</option>
+        <option value="New York">New York</option>
+    </select>
+    <div id="map"></div>
+    <script>
+      var map;
+      var infowindow;
+      var markers = [];
+      var keyword;
+      function initMap() {
+        var center = {lat: 0, lng: 0};
+        map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 2,
+          center: center
+        });
+        document.getElementById("drop").onchange = function(){
+          keyword = this.value;
+          start(keyword);
+        }
+        setInterval(function(){start(keyword)},10000);
+      }
+      function addContent(tweets){
+          var myPosition = {lat: tweets.geo[1], lng: tweets.geo[0] };
+          var time = tweets.time;
+          var user = tweets.user;
+          var text = tweets.text;
+          var prev_infowindow = false;
+          // API Reference: https://developers.google.com/maps/documentation/javascript/examples/infowindow-simple
+          var marker = new google.maps.Marker({
+              position:myPosition,
+              map: map
+          });
+          markers.push(marker);
+          setMapOnAll(map);
+          google.maps.event.addListener(marker, "click", function () {
+                if (infowindow) {infowindow.close();}
+                var contentString =  '<div id="content">'+'<div id="siteNotice">'+'</div>'+
+                          '<h1 id="firstHeading" class="Twitter message">Twitter message</h1>'+
+                          '<div id="bodyContent">' + user + ' : '  +  text +'</div>'+'</div>';
+                infowindow = new google.maps.InfoWindow({
+                  content: contentString
+                });
+                infowindow.open(map, marker);
+          });
+      }
+      function start(keyword) {
+        var xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function() {
+          if (this.readyState == 4 && this.status == 200) {
+            deleteMarkers();
+            var obj = JSON.parse(this.responseText);
+            var tweets = obj.hits.hits
+            for(var i = 0; i < tweets.length; i++){
+                addContent(tweets[i]._source)
+            }
+          }
+        };
+        xhttp.open("GET", "/" + keyword, true);
+        xhttp.send();
+      }
+      function deleteMarkers() {
+        setMapOnAll(null);
+        markers = [];
+      }
+      function setMapOnAll(map) {
+        for (var i = 0; i < markers.length; i++) {
+          markers[i].setMap(map);
+        }
+      }
+    </script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZcaqef_RVA47F_WDsshaahZ9bWC_aoeo&callback=initMap">
     </script>
   </body>
 </html>
