--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <style>
@@ -11,7 +11,7 @@
   </head>
   <body>
     <h3>Tweet Map App</h3>
-    <select id="query">
+    <select id="drop">
       <option value="obama">obama</option>
       <option  value="trump">trump</option>
       <option value="clinton">clinton</option>
@@ -54,56 +54,10 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyACGeO9TeMbOLSk1We5O5Yrh5FXnGUQSbs&callback=initMap">
     </script>
   </body>
-</html> -->
+</html>
 
-<!DOCTYPE html>
-<html>
-  <head>
-    <style>
-      h2 {
-        position: relative;
-        left: 45%;
-        font-family: verdana;
-        font-size: 200%
-       }
-      p{
-        position: relative;
-        font-size: 130%;
-        font-family: normal;
-      }
-      select{
-        position: relative;
-        font-size: 130%;
-      }
-      #map {
-        height: 550px;
-        position: absolute;
-        left: 50px;
-        right: 100px;
-        padding-top: 30px;
-        border-style: hidden;
-        margin-bottom: 70px;
-      }
 
-    </style>
-  </head>
-  <body>
-    <h2>Twitter Map</h2>
-    <p>To see the tweets on Googole map, please click the dropdown menu and select one of the key words. Twitts refreshes every 10s</p>
-     <select id=drop>
-        <option value="Trump">Trump</option>
-        <option value="Hillary">Hillary</option>
-        <option value="Warriors">Warriors</option>
-        <option value="iphone7">iphone7</option>
-        <option value="LinkedIn">LinkedIn</option>
-        <option value="Amazon">Amazon</option>
-        <option value="Google">Google</option>
-        <option value="Uber">Uber</option>
-        <option value="Columbia">Columbia</option>
-        <option value="New York">New York</option>
-    </select>
-    <div id="map"></div>
-    <script>
+<!--     <script>
       var map;
       var infowindow;
       var markers = [];
@@ -168,9 +122,5 @@
           markers[i].setMap(map);
         }
       }
-    </script>
-    <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZcaqef_RVA47F_WDsshaahZ9bWC_aoeo&callback=initMap">
-    </script>
-  </body>
-</html>
+    </script> -->
+
